--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,29 @@
 body {
-    background-color: #efeee7;
-    margin: 0;
-    padding: 0;
-    font-family: "Georgia", "Times New Roman", Times, serif;
-    font-size: 10px;
-    line-height: 15px;
+    background-color: teal; 
+    color: #f7f0f0;
+
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12px;
 }
 
-h1 {
-    color: #efeeee;
-    background-color: #333333;
-    margin: 0;
-    text-align: center;
-    padding-top: 20pix;
+.container {
+    width: 960px;
+    margin: auto;
+}
+
+.box-1 {
+    background-color: I #333333;
+    color: #ffffff;
+    padding-top: 20px;
     padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
 
+    margin-top: 20px;
+    margin: 20px;
 }
 
- a {
-     color: #dd2211;
- }
-
- .container {
-     width: 1024px;
-     margin: 0 auto;
- }
-
- 
- 
+.box-1 h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+}
