--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@
   h4,
   h5,
   h6 {
-    font-family: Georgia, 'Times New Roman', Times, serif
+    font-family: Arial, Helvetica, sans-serif
    
   }
   
