--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,8 @@
     margin-bottom: 10px;
     font-size: 20px;
     color: teal;
-    text-align: left; 
-    flex-wrap: wrap;
-    padding: 0rem;
+    margin-top: 0 auto;
+ 
   }
 
   h2,
@@ -39,15 +38,14 @@
   
   header {
     width: 100%;
-    background-color: var(--dark-blue);
+    background-color: whitesmoke;
   }
   
   .header-wrapper {
     width: 0%;
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
-    padding-left: 0vh;
+ 
   }
   
   .header-wrapper h1 {
@@ -60,9 +58,7 @@
     color: var(--light);
     text-decoration: none;
     width: 90x;
-    margin: 0rem;
-    display: flex;
-    flex-wrap: wrap;
+ 
     
   }
   
@@ -101,3 +97,167 @@
   
   }
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+* {
+    box-sizing: border-box;
+  }
+
+  title {
+      display: none;
+  }
+  
+
+
+  :root {
+    --charcoal: #393B4F;
+    --silver: #A8ADBA;
+    --white: #FEFEFF;
+    --light-red: rgb(33, 17, 104);
+    --dark-red: rgb(45, 8, 87);
+  }
+  
+html {
+    color: -internal-root-color;
+
+}
+
+  /* get rid of browser's margins and set background color */
+  body {
+    margin: 0;  
+    padding: 0;
+    background-color: teal
+    font-family: Georgia, 'Times New Roman', Times, serif
+  }
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    display: block;
+}
+
+:root {
+    --charcoal: #393B4F;
+    --silver: #A8ADBA;
+    --white: #FEFEFF;
+    --light-red: rgb(33, 17, 104);
+    --dark-red: rgb(45, 8, 87);
+  }
+
+html {
+    color: -internal-root-color;
+}  
+  
+  h1,
+  h2 {
+      display: block;
+      font-size: 1.5em;
+      margin-block-start: 0.83em;
+      margin-block-end: 0.83em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      font-weight: bold;
+  }
+  }
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: Arial, Helvetica, sans-serif
+  }
+  
+  /* <main> */
+  main {
+    width: 960px;
+    /* center on page using auto for left/right */
+    margin: 50px auto;
+    /* add padding so html inside has space */
+    padding: 20px;
+    background-color: var(--white);
+    border: 4px solid var(--charcoal);
+  }
+
+
+  /* target <h2> element inside of <main> */
+  main h2 {
+    color: mediumslateblue;
+    /* set padding to 0 top, 10 right and left, and 20 bottom */
+    padding: 0 10px 20px;
+    border-bottom: 3px solid var(--charcoal);
+  }
+  
+  /* flex parent */
+  .flex-container {
+    /* create flexbox */
+    display: flex;
+    /* instruct it to break onto next line if it runs out of space */
+    flex-wrap: wrap;
+    /* put all unused space between items */
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  /* flex child */
+  .flex-item {
+    /* make each one 45%, putting 10% between each element on the page */
+    width: 45%;
+    /* rounded corners */
+    border-radius: 14px;
+    border: 4px solid var(--light-red);
+    background-color: var(--charcoal);
+    font-size: 22px;
+    font-weight: bold;
+  
+    /* put space between each one vertically */
+    margin-bottom: 15px;
+  
+    /* for files in local images folder, use url('../images/file-name.jpg') */
+    background-image: url('https://www.placecage.com/g/500/500');
+  
+    /* tell background to fit box no matter what */
+    background-size: cover;
+  
+    /* crop it at the center */
+    background-position: center;
+  
+    /* padding top and bottom 20px, 0 for left/right */
+    padding: 20px 0;
+  
+    /* set minimum heigh value so there's room */
+    min-height: 250px;
+  
+    /* rather than use position...use flexbox and create column instead of row */
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* for text area inside of flex item */
+  .flex-item span {
+    /* pushes element to bottom of flex item */
+    margin-top: auto;
+    width: 100%;
+    background-color: var(--silver);
+    color: var(--charcoal);
+    padding: 10px 5px;
+    text-align: center;
+  }
