--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,6 @@ html {
 
 }
 
-  /* get rid of browser's margins and set background color */
   body {
     margin: 0;  
     padding: 0;
@@ -169,16 +168,7 @@ html {
 }  
   
   h1,
-  h2 {
-      display: block;
-      font-size: 1.5em;
-      margin-block-start: 0.83em;
-      margin-block-end: 0.83em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
-      font-weight: bold;
-  }
-  }
+  h2,
   h3,
   h4,
   h5,
@@ -186,74 +176,50 @@ html {
     font-family: Arial, Helvetica, sans-serif
   }
   
-  /* <main> */
   main {
     width: 960px;
-    /* center on page using auto for left/right */
     margin: 50px auto;
-    /* add padding so html inside has space */
     padding: 20px;
     background-color: var(--white);
     border: 4px solid var(--charcoal);
   }
 
 
-  /* target <h2> element inside of <main> */
   main h2 {
     color: mediumslateblue;
-    /* set padding to 0 top, 10 right and left, and 20 bottom */
     padding: 0 10px 20px;
     border-bottom: 3px solid var(--charcoal);
   }
   
-  /* flex parent */
+ 
   .flex-container {
-    /* create flexbox */
     display: flex;
-    /* instruct it to break onto next line if it runs out of space */
     flex-wrap: wrap;
-    /* put all unused space between items */
     justify-content: space-between;
     width: 100%;
   }
   
-  /* flex child */
+
   .flex-item {
-    /* make each one 45%, putting 10% between each element on the page */
     width: 45%;
-    /* rounded corners */
     border-radius: 14px;
     border: 4px solid var(--light-red);
     background-color: var(--charcoal);
     font-size: 22px;
     font-weight: bold;
-  
-    /* put space between each one vertically */
     margin-bottom: 15px;
-  
-    /* for files in local images folder, use url('../images/file-name.jpg') */
-    background-image: url('https://www.placecage.com/g/500/500');
-  
-    /* tell background to fit box no matter what */
+    background-image: url(https://www.placecage.com/g/500/500);
     background-size: cover;
-  
-    /* crop it at the center */
     background-position: center;
-  
-    /* padding top and bottom 20px, 0 for left/right */
     padding: 20px 0;
-  
-    /* set minimum heigh value so there's room */
-    min-height: 250px;
-  
-    /* rather than use position...use flexbox and create column instead of row */
+    min-height: 250px;  
     display: flex;
     flex-direction: column;
   }
   
-  /* for text area inside of flex item */
+  
   .flex-item span {
-    /* pushes element to bottom of flex item */
+    
     margin-top: auto;
     width: 100%;
     background-color: var(--silver);
