--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   
   
   body {
-    background-color: var(--light);
+    background-color: gray
     margin: 0;
     padding: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -30,23 +30,17 @@
   
   
   header {
-    border-bottom: 0;
-    background-color: rgb(23, 152, 212);
+    border-bottom: 10px;
+    background-color: rgb(58, 201, 15);
+    margin: 0;
+    padding: 0;
   }
 
 .container {
-  width: 80%;
+  width: 10px;
   margin: 0 auto;
 }
-  
-.nav {
-  float: right
-}
 
-.nav ul {
-  float: left;
-}
-  
 .img  {
   width: 0;
   padding: 0;
@@ -59,7 +53,7 @@
 
 
 body {
-  margin: 0;
+  margin: 10px;
   padding: 0;
 }
 
@@ -109,7 +103,7 @@ html {
   body {
     margin: 0;  
     padding: 0;
-    background-color: teal
+    background-color: rgb(66, 12, 35)
     font-family: Georgia, 'Times New Roman', Times, serif
   }
 
